--- a/schedule/week_1/web/web_exercise_2.css
+++ b/schedule/week_1/web/web_exercise_2.css
@@ -1,4 +1,21 @@
-p{
-    color: red;
+body {
+    font-size: 16px;
+    margin: auto;
+    padding: 2em;
+    
+}
+h1 {
+    font-size: 2em;
+    line-height: 150%;
+}
+h2 {
+    font-size: 1.5em;
+    line-height: 125%;
+}
+p {
+    color: blue;
     font-weight: bold;
 }
+ol {
+    border: 1px solid blue;
+ }
