--- a/schedule/week_1/web/web_exercise_3.css
+++ b/schedule/week_1/web/web_exercise_3.css
@@ -1,10 +1,52 @@
-p{
-    color: red;
+body {
+    font-size: 16px;
+    margin: auto;
+    padding: 2em;
+    
+}
+h1 {
+    font-size: 2em;
+    line-height: 150%;
+}
+h2 {
+    font-size: 1.5em;
+    line-height: 125%;
+}
+p {
+    color: blue;
     font-weight: bold;
 }
+ol {
+    border: 1px solid blue;
+ }
+ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+ol li {
+    float: left;
+}
+
+ol li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+ol li a:hover {
+    background-color: #111;
+}
+
 #redButton{
     background-color: pink;
 }
 #greenButton{
     background-color: lightgreen;
-}
+}/* comments */
