--- a/schedule/week_3/templates/index.html
+++ b/schedule/week_3/templates/index.html
@@ -7,5 +7,6 @@
     <h1>index.html</h1>
     <p>This is index.html in response to a request for / (ROOT) in flask-index-template.py</p>
     <p>So this is not a scalable server.</p>
+    <p>And life is not a dream...</p>
   </body>
 </html>
